--- a/docs-website/docs/concepts/pipelines/smart-connections.mdx
+++ b/docs-website/docs/concepts/pipelines/smart-connections.mdx
@@ -27,7 +27,12 @@ When multiple outputs are connected to the same input, the pipeline implicitly c
 
 Multiple converters can write directly into a single `DocumentWriter` without using a `DocumentJoiner`:
 
+<details>
+
+<summary>Expand to see the pipeline graph</summary>
 <ClickableImage src="/img/pipeline-illustration-auto-joiner.png" alt="Pipeline architecture diagram showing a DocumentWriter receiving inputs from multiple converters without a Joiner" size="large" />
+
+</details>
 
 ```python
 from haystack import Pipeline
