--- a/docs-website/docs/development/tracing.mdx
+++ b/docs-website/docs/development/tracing.mdx
@@ -86,26 +86,6 @@ To use OpenTelemetry as your tracing backend, follow these steps:
      tracing.enable_tracing(OpenTelemetryTracer(tracer))
      ```
 
-### MLflow
-
-[MLflow](https://mlflow.org/) is an open-source platform for managing the end-to-end machine learning and AI lifecycle. MLflow provides native tracing support for Haystack. Simply install MLflow and enable automatic tracing with a single line of code.
-
-```shell
-pip install mlflow
-```
-
-```python
-import mlflow
-
-mlflow.haystack.autolog()
-```
-
-This automatically captures traces from all Haystack pipelines and components, including latencies, token usage, cost, and any exceptions.
-
-:::info
-Check out the [MLflow Haystack integration guide](https://mlflow.org/docs/latest/genai/tracing/integrations/listing/haystack.html) for a full walkthrough with examples.
-:::
-
 ### Datadog
 
 To use Datadog as your tracing backend, follow these steps:
@@ -145,6 +125,28 @@ Simply install the component with `pip install langfuse-haystack`, then add it t
 Check out the component's [documentation page](../pipeline-components/connectors/langfuseconnector.mdx) for more details and example usage, or our [blog post](https://haystack.deepset.ai/blog/langfuse-integration) for the complete walkthrough.
 :::
 <ClickableImage src="/img/11cec4f-langfuse-generation-span.png" alt="Langfuse trace detail view showing generation span with input prompt, output, metadata, latency, and cost information for a language model call" />
+
+### MLflow
+
+[MLflow](https://mlflow.org/) is an open-source platform for managing the end-to-end machine learning and AI lifecycle. MLflow provides native tracing support for Haystack. Simply install MLflow and enable automatic tracing with a single line of code.
+
+```shell
+pip install mlflow
+```
+
+```python
+import mlflow
+
+mlflow.haystack.autolog()
+# Optionally set an experiment name
+mlflow.set_experiment("Haystack")
+```
+
+This automatically captures traces from all Haystack pipelines and components, including latencies, token usage, cost, and any exceptions.
+
+:::info
+Check out the [MLflow Haystack integration guide](https://haystack.deepset.ai/integrations/mlflow) for a full walkthrough with examples.
+:::
 
 ### Weights & Biases Weave
 
